--- a/css/main.css
+++ b/css/main.css
@@ -25,9 +25,13 @@ html {
 }
 
 .banner {
-
+  position: relative;
+  color: #fff;
+  max-height: 24em;
 }
 
 .banner-content {
-
+  bottom: 0;
+  left: 0;
+  position: absolute;
 }
